syntax = "proto3";

package greet;

option go_package = "github.com/tomasdepi/golang/projects/grpc_examples/pb/greet";

message GreetRequest {
  string name = 1;
}

message GreetResponse {
  string result = 1;
}

service GreetService {
  rpc Greet(GreetRequest) returns (GreetResponse);
  rpc GreetManyTimes(GreetRequest) returns (stream GreetResponse);
}